--- a/SCSS/index.scss
+++ b/SCSS/index.scss
@@ -625,6 +625,7 @@ footer{
         }
     }
     #blog{
+        margin-top: -100px;
         .container{
             .in-blog{
                 .blog-carts{
