--- a/SCSS/index.css
+++ b/SCSS/index.css
@@ -560,6 +560,12 @@ footer .container .in-footer .icons i:hover {
   #visit .container .in-visit .visit-carts {
     grid-template-columns: repeat(1, auto);
   }
+  #blog {
+    margin-top: -100px;
+  }
+  #blog .container .in-blog .blog-top .input input {
+    width: 100%;
+  }
   #blog .container .in-blog .blog-carts {
     grid-template-columns: repeat(1, auto);
   }
