--- a/SCSS/index.scss
+++ b/SCSS/index.scss
@@ -630,6 +630,7 @@ footer{
             .in-blog{
                 .blog-top{
                     .input{
+                        width: 100%;
                         input{
                             width: 100%;
                         }
