--- a/SCSS/index.scss
+++ b/SCSS/index.scss
@@ -385,6 +385,17 @@ nav{
                 flex-direction: column;
                 align-items: center;
                 gap: 20px;
+                .input{
+                    width: 50%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    input{
+                        padding: 10px 20px;
+                        border-radius: 20px;
+                        width: 60%;
+                    }
+                }
                 h2{
                     width: 70%;
                     text-align: center;
